updated Cmake lists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/Detection.msg",
+  "msg/Detection.msg"
   "msg/Command.msg"
 )
 
