--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Detection.msg"
   "msg/Command.msg"
+  "msg/CommandBuffer.msg"
   "msg/State.msg"
   "msg/SerialResponse.msg"
   "srv/SerialCommand.srv"
