added photo service

--- a/package.xml
+++ b/package.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>bittle_msgs</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="reid@todo.todo">reid</maintainer>
+  <description>Message and service definitions for Bittle</description>
+  <maintainer email="rgraves@andrew.cmu.edu">reid</maintainer>
   <license>Apache-2.0</license>
 
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
-  <member_of_group>rosidl_interface_packages</member_of_group>
-
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>rosidl_default_runtime</build_depend>
+
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
@@ -20,3 +24,5 @@
     <build_type>ament_cmake</build_type>
   </export>
 </package>
+
+
